im so dumb its not even funny

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 Took way too long to get the ascii art above working.
 
-                I would add a blog, but I already have a Tumblr (and Bluesky and Mastodon), so just go there for blog-related stuff.
+                I might add a blog soon.
 
                 I'm not good at web design!!!!!!! But I do like box shadows. And funky transitions. So that makes up for it. Probably. Anyways, I did fix the broken navbar so aren't you proud of me.
 
